# fabio

./: .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  COMMANDS.md  Cargo.toml  Dockerfile  Dockerfile.release  EXAMPLES.md  LICENSE  README.md  SECURITY.md  build.rs  cliff.toml  deny.toml  install.ps1  install.sh  prek.toml  pyproject.toml  rustc-ice-2026-07-15T06_13_26-12802.txt  rustc-ice-2026-07-15T06_13_26-12804.txt  rustc-ice-2026-07-15T06_13_26-12805.txt
.agents/: API-BEHAVIORS-DISCOVERED.md  RELEVANT-FILES.md
.agents/skills/dev-pr-checklist/: SKILL.md
.agents/skills/dev-release/: SKILL.md
.agents/skills/fabio/: SKILL.md
.agents/skills/fabio-admin/: SKILL.md
.agents/skills/fabio-bi/: SKILL.md
.agents/skills/fabio-data-engineering/: SKILL.md
.agents/skills/fabio-data-science/: SKILL.md
.agents/skills/fabio-dataflows/: SKILL.md
.agents/skills/fabio-deploy-cicd/: SKILL.md
.agents/skills/fabio-geospatial/: SKILL.md
.agents/skills/fabio-lakehouse/: SKILL.md
.agents/skills/fabio-migration/: SKILL.md
.agents/skills/fabio-mirroring/: SKILL.md
.agents/skills/fabio-ontology/: SKILL.md
.agents/skills/fabio-rti-kql/: SKILL.md
.agents/skills/fabio-warehouse-sql/: SKILL.md
.agents/skills/fabio/references/: API-BEHAVIORS.md
.agents/skills/fabio/scripts/: install.sh
.agents/skills/pr-checklist/: SKILL.md
.agents/skills/release/: SKILL.md
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md  copilot-instructions.md  copilot-review-instructions.md  dependabot.yml  fabric-api-specs-cursor  labeler.yml  labels.yml  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/instructions/: commands.instructions.md  tests.instructions.md
.github/prompts/: sync-fabric-api-specs.md
.github/workflows/: ci.yml  codeql.yml  copilot-autofix.yml  copilot-review.yml  dependabot-auto-merge.yml  dependency-review.yml  docker.yml  docs.yml  eval.yml  labeler.yml  release.yml  secret-scanning.yml  semantic-pull-request.yml  sync-fabric-api-specs.yml  test-auth.yml
docs/: .gitignore  astro.config.mjs  package-lock.json  package.json
docs/scripts/: generate-reference.mjs  generate-reference.test.mjs
docs/src/components/: QuickStartTabs.astro
docs/src/content/docs/: getting-started.md
docs/src/pages/: index.astro
docs/src/styles/: docs.css  landing.css
scripts/: create-fabio-app.sh  cross-check.sh  release.sh  setup-ci-auth.sh
src/: agent.rs  cli.rs  client.rs  errors.rs  main.rs  metrics.rs  output.rs  parallel.rs  token_cache.rs  verbose.rs
src/commands/: admin.rs  agent_context.rs  agent_context_commands.json  agent_context_definition_paths.json  agent_context_job_types.json  agent_context_output_conventions.json  agent_context_workflows.json  anomaly_detector.rs  apache_airflow_job.rs  app_backend.rs  auth.rs  azure_databricks_storage.rs  capacity.rs  catalog.rs  completions.rs  connection.rs  context.rs  context_agent.rs  context_docs.rs  copy_job.rs  cosmos_db_database.rs  dashboard.rs  data_build_tool_job.rs  data_pipeline.rs  dataagent.rs  dataflow.rs  datamart.rs  deployment_pipeline.rs  digital_twin_builder.rs  digital_twin_builder_flow.rs  docs.rs  domain.rs  environment.rs  event_schema_set.rs  eventhouse.rs  eventstream.rs  feedback.rs  gateway.rs  git.rs  git_relation.rs  (+50 more)
src/commands/admin/: domains.rs  items.rs  mod.rs  tags.rs  tenant_settings.rs  users.rs  workloads.rs  workspaces.rs
src/commands/context/: agent.rs  best_practices.rs  disambiguations.rs  docs.rs  examples.rs  mod.rs  personas.rs  schemas.rs  skillgen.rs  tenant.rs  workflows.rs
src/commands/context_data/best_practices/: admin_apis.json
src/commands/context_data/examples/: lakehouse_list_tables.json
src/commands/dataagent/: config.rs  crud.rs  datasources.rs  definition.rs  elements.rs  fewshots.rs  mod.rs  query.rs
src/commands/deploy/: apply.rs  changeset.rs  config.rs  export.rs  folders.rs  git_diff.rs  init_params.rs  mod.rs  ordering.rs  params.rs  plan.rs  platform.rs
src/commands/eventstream/: builder.rs  mod.rs
src/commands/item/: bulk.rs  copy_move.rs  crud.rs  definitions.rs  mod.rs  tags.rs
src/commands/kql_database/: intelligence.rs  mod.rs
src/commands/lakehouse/: crud.rs  definitions.rs  execution_definitions.rs  files.rs  iceberg.rs  insights.rs  livy.rs  maintenance.rs  mod.rs  shortcuts.rs  sync.rs  tables.rs
src/commands/mcp/: mod.rs  serve.rs
src/commands/semantic_model/: crud.rs  definitions.rs  mod.rs  operations.rs  powerbi.rs
src/commands/sql_database/: audit.rs  crud.rs  definitions.rs  import.rs  insights.rs  mirroring.rs  mod.rs  query.rs  statistics.rs
src/commands/warehouse/: admin.rs  crud.rs  insights.rs  mod.rs  query.rs  restore_points.rs  statistics.rs
src/commands/workspace/: capacity.rs  crud.rs  folders.rs  identity.rs  mod.rs  networking.rs  roles.rs  settings.rs
src/fabio/: __init__.py  auth_store.py  cache.py  cli.py  client.py  errors.py  output.py
src/fabio/commands/: __init__.py  auth.py  item.py  lakehouse.py  notebook.py  warehouse.py  workspace.py
tests/: e2e_admin.rs  e2e_agent_context.rs  e2e_agent_native.rs  e2e_agent_safety.rs  e2e_anomaly_detector.rs  e2e_apache_airflow_job.rs  e2e_app_backend.rs  e2e_auth.rs  e2e_azure_databricks_storage.rs  e2e_capacity.rs  e2e_catalog.rs  e2e_connection.rs  e2e_context.rs  e2e_context_agent.rs  e2e_copy_job.rs  e2e_cosmos_db_database.rs  e2e_dashboard.rs  e2e_data_build_tool_job.rs  e2e_data_pipeline.rs  e2e_dataagent.rs  e2e_dataflow.rs  e2e_datamart.rs  e2e_deploy.rs  e2e_deployment_pipeline.rs  e2e_digital_twin_builder.rs  e2e_digital_twin_builder_flow.rs  e2e_domain.rs  e2e_environment.rs  e2e_event_schema_set.rs  e2e_eventhouse.rs  e2e_eventstream.rs  e2e_fabric_cicd_compat.rs  e2e_feedback.rs  e2e_gateway.rs  e2e_git.rs  e2e_global_options.rs  e2e_graph_model.rs  e2e_graph_query_set.rs  e2e_graphql_api.rs  e2e_item.rs  (+66 more)
tests/common/: mod.rs
tests/eval/: promptfooconfig.yaml
(+166 files in other folders)
