[package]
name = "fabio"
version = "0.5.0"
edition = "2024"
rust-version = "1.85"
description = "Agent-first CLI for managing Microsoft Fabric artifacts and data"
license = "MIT"
repository = "https://github.com/iemejia/fabio"
keywords = ["microsoft-fabric", "cli", "data-engineering", "lakehouse"]
categories = ["command-line-utilities"]

[[bin]]
name = "fabio"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "fs"] }

# HTTP
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Azure auth
azure_identity = { version = "1", default-features = false }
azure_core = { version = "1", default-features = false }

# Error handling
thiserror = "2"
anyhow = "1"

# Output formatting
comfy-table = "7"

# Date/time (clock = Utc::now(); no timezone DB needed)
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Home directory resolution
home = "0.5"

# Misc
base64 = "0.22"
glob = "0.3"

# TDS protocol (SQL query execution for warehouse/lakehouse)
# TODO: Switch to upstream crates.io release once https://github.com/microsoft/mssql-rust-driver
# publishes a version with rustls support (currently only available in this fork).
mssql-tds = { git = "https://github.com/iemejia/mssql-rs.git", branch = "feat/examples", default-features = false, features = ["rustls-backend"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
wiremock = "0.6"
serial_test = "3"
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow common patterns
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
