[package]
name = "fabio"
version = "0.34.0"
edition = "2024"
rust-version = "1.96"
description = "Agent-first CLI for managing Microsoft Fabric artifacts and data"
license = "MIT"
repository = "https://github.com/iemejia/fabio"
keywords = ["microsoft-fabric", "cli", "data-engineering", "lakehouse"]
categories = ["command-line-utilities"]

[[bin]]
name = "fabio"
path = "src/main.rs"

[features]
# Enable vendored OpenSSL build for cross-compilation from Linux.
# Usage: cargo build --features vendored-openssl --target <triple>
# Not needed for native builds (system OpenSSL) or Windows CI (cfg(windows) adds it).
vendored-openssl = ["openssl/vendored"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "fs"] }

# HTTP
reqwest = { version = "0.13", features = ["json", "rustls", "form", "multipart"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Azure auth
azure_identity = { version = "1", default-features = false, features = ["tokio", "client_certificate"] }
azure_core = { version = "1", default-features = false, features = ["reqwest", "reqwest_rustls", "tokio"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Output formatting
comfy-table = "7"

# Date/time (clock = Utc::now(); no timezone DB needed)
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Home directory resolution
home = "0.5"

# Misc
base64 = "0.22"
glob = "0.3"
csv = "1"

# Archive extraction (upgrade command)
flate2 = "1"
tar = "0.4"

# TDS protocol (SQL query execution for warehouse/lakehouse)
# TODO: Switch to upstream crates.io release once https://github.com/microsoft/mssql-rust-driver
# publishes a version with rustls support (currently only available in this fork).
mssql-tds = { git = "https://github.com/iemejia/mssql-rs.git", rev = "bb063b01fa3ad7d943f18f29e0a92b074f5b37e6", default-features = false, features = ["rustls-backend"] }

# URL encoding for query parameters (security: prevent parameter injection)
urlencoding = "2"

# XML parsing (OWL/RDF ontology import)
quick-xml = "0.40"

# OpenSSL (transitive via azure_identity/client_certificate; made explicit so
# the vendored-openssl feature can gate the vendored build for cross-compilation)
openssl = "0.10"

# File locking for job ledger (security: prevent race conditions)
fs2 = "0.4"
sha2 = "0.11.0"
regex = "1"
uuid = { version = "1", features = ["v4"] }
jsonpath-rust = "1"
jmespath = "0.5.0"
serde_yaml = "0.9"
async-trait = "0.1.89"
getrandom = "0.4.2"
md5 = "0.8.0"

# DPAPI encryption + WAM broker auth for Windows
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Security_Cryptography", "Win32_Foundation"] }
windows = { version = "0.62", features = ["Foundation", "Security_Authentication_Web_Core", "Security_Credentials"] }
# OpenSSL vendored build for Windows (client_certificate feature requires OpenSSL;
# Windows runners don't have it pre-installed, especially ARM64)
openssl = { version = "0.10", features = ["vendored"] }
# Zip extraction for upgrade on Windows
zip = { version = "7", default-features = false, features = ["deflate"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
wiremock = "0.6"
serial_test = "3"
serde_json = { version = "1", features = ["preserve_order"] }

[profile.dev]
debug = "line-tables-only"     # ~60-70% smaller debuginfo; backtraces still work
split-debuginfo = "unpacked"   # avoid one giant .o; speeds up linking on macOS/Linux

[profile.dev.package."*"]
opt-level = 1                  # optimize deps slightly — smaller + faster tests
debug = false                  # no debug symbols for third-party crates

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow common patterns
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[package.metadata.dev-tools]
# Recommended tools for development (install with: cargo install <tool>)
prek = { version = ">=0.4", description = "Fast Rust-native pre-commit hooks (prek install)" }
git-cliff = { version = ">=2.13", description = "Changelog generator from conventional commits" }
cargo-zigbuild = { version = ">=0.23", description = "Cross-compilation via Zig linker" }
cargo-xwin = { version = ">=0.23", description = "Cross-compilation for Windows MSVC" }
cargo-audit = { version = ">=0.22", description = "Security vulnerability scanner" }
